# grimoire-engine

./: .gitignore  CLAUDE.md  Game Dev Tools.md  IDEA.md  PHASES.md  README.md  mvp-v2.md  pyproject.toml
docs/: architecture.md  status.md  world-authoring.md
editor/: Improvements.md  PROGRESS.md
editor/backend/: app.py  json_io.py  yaml_io.py
editor/backend/routes/: armor.py  characters.py  dialogue.py  factions.py  game_constants.py  game_types.py  generate.py  items.py  loot_tables.py  mods.py  places.py  (+7 more)
editor/frontend/: package-lock.json  package.json  vite.config.ts
grimoire/api/: app.py  routes.py
grimoire/cli/: harness.py
grimoire/dialogue/: matcher.py  tree_runner.py
grimoire/director/: director.py
grimoire/engine/: context.py  events.py  game_state.py  schedules.py  session.py
grimoire/grimoire/: storyteller.py  writer.py
grimoire/llm/: anthropic.py  embeddings.py  ollama.py  openai.py  provider.py  token_tracker.py
grimoire/loader/: world_loader.py
grimoire/models/: __init__.py  character.py  common.py  dialogue.py  event.py  faction.py  place.py  scene.py  story.py  world.py
grimoire/storage/: database.py  save_load.py  vector_store.py
story/: grimoire.yaml  story.yaml
story/world/: world.yaml
tests/: test_api.py  test_dialogue.py  test_director.py  test_embeddings_live.py  test_engine.py  test_llm.py  test_models.py  test_ollama_live.py  test_save_load.py  test_session.py  test_storage.py
world/: world.yaml
world/characters/: mira.yaml
world/game_data/: types.yaml
world/places/: miras_quarters.yaml  rusty_tap.yaml
(+69 files in other folders)
